--- a/lib-rpc-server/dune
+++ b/lib-rpc-server/dune
@@ -1,4 +1,7 @@
 (library
  (name ocamlformat_rpc)
  (public_name ocamlformat.rpc)
- (libraries ocamlformat ocamlformat.rpc_lib_protocol))
+ (libraries
+  ocamlformat
+  ocamlformat.ocamlformat_conf
+  ocamlformat.rpc_lib_protocol))
