--- a/lib/dune
+++ b/lib/dune
@@ -18,6 +18,7 @@
  (public_name ocamlformat-lib)
  (flags
   (:standard
+   -open Sexplib
    -open
    Ocaml_common
    -open
@@ -29,6 +30,7 @@
  (instrumentation
   (backend bisect_ppx))
  (libraries
+ sexplib
   format_
   ocaml_common
   parser_standard
